--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Soundboard": {
+    "WebsiteRoot": "./Website/build/dist/soundboard",
+    "SamplesRoot": "./Media",
+    "DatabaseFile": ".soundboard.db"
   }
 }
