--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
   },
   "AllowedHosts": "*",
   "Soundboard": {
-    "SamplesRoot": "C:/Users/Ramon/Documents/Riwo/Soundboard/Media",
-    "DatabaseFile": "_soundboard.db"
+    "WebsiteRoot": "./Website",
+    "SamplesRoot": "./Media",
+    "DatabaseFile": ".soundboard.db"
   }
 }
