--- a/appsettings.debug.json
+++ b/appsettings.debug.json
@@ -7,8 +7,7 @@
     }
   },
   "Soundboard": {
-    "WebsiteRoot": "./Website/build/dist/soundboard",
-    "SamplesRoot": "./Media",
-    "DatabaseFile": ".soundboard.db"
+    "Urls": "http://0.0.0.0:5000",
+    "CorsOrigins": "http://localhost:4200;http://192.168.1.20:4200"
   }
 }
