--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "Soundboard": {
+    "Urls": "http://0.0.0.0:8100",
     "WebsiteRoot": "./Website",
     "SamplesRoot": "./Media",
     "DatabaseFile": ".soundboard.db"
